...
              controller: _passwordController,
            ),
            const SizedBox(height: 32),
            BlocBuilder<IamBloc, IamState>(
              builder: (context, state) {
                return PrimaryButton(
                  text: 'Sign in',
                  isLoading: state is IamLoading,
                  onPressed: _onSignIn,
                );
              },
            ),
            const SizedBox(height: 16),
...
