...
              initialLocation: index == widget.navigationShell.currentIndex,
            );
          },
          type: BottomNavigationBarType.fixed,
          items: [
            _buildNavItem('assets/icons/home-icon.svg', 'Home', 0),
            _buildNavItem('assets/icons/file-icon.svg', 'Feed', 1),
            _buildNavItem('assets/icons/message-square-icon.svg', 'Messages', 2),
            _buildNavItem('assets/icons/user-icon.svg', 'Profile', 3),
          ],
        ),
      ),
    );
...
